--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "typescript": "~4.1.5",
+    "vue-axios": "^3.2.5",
     "vuex-module-decorators": "^1.0.1"
   }
 }
